--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /player/__pycache__
 /obstacle/__pycache__
 /background/__pycache__
+/collision/__pycache__
+/images/__pycache__
+/manager/__pycache__
+/virus/__pycache__
